# getInfoAllSC

./: CMakeLists.txt  getInfoAllSC.pro  main.cpp  main.h
plib/: CMakeLists.txt  clib.c  mainplib.cpp  plib.cpp  plib.h  ptrans.cpp  ptrans.h  pudp.cpp  pudp.h
